[package]
name = "ssc-billing-logger"
version = "0.1.0"
authors = ["Lars Viklund <zao@zao.se>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
num = "0.2"
reqwest = "0.9"
rusqlite = "0.16"
rust_decimal = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
subprocess = "0.1"
url = "1"
url_serde = "0.2"
xml-rs = "0.8"