[package]
name = "ssc-billing-logger"
version = "0.1.0"
authors = ["Lars Viklund <zao@zao.se>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.6"
failure = "0.1"
log = "0.4"
num = "0.2"
reqwest = "0.9"
rusqlite = "0.20"
rust_decimal = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
subprocess = "0.1"
url = { version = "2", features = ["serde"]}
xml-rs = "0.8"