[package]
name = "ssc-billing-logger"
version = "0.3.0"
authors = ["Lars Viklund <zao@zao.se>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
failure = "0.1"
log = "0.4"
num = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
rust_decimal = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
subprocess = "0.2"
url = { version = "2", features = ["serde"]}
xml-rs = "0.8"